# sparkrun

./: .gitignore  CLAUDE.md  README.md  RECIPES.md  pyproject.toml  versions.yaml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
benchmarks/: nemotron3-nano-30b-vllm.yaml
recipes/: nemotron3-nano-30b-nvfp4-vllm.yaml  qwen3-1.7b-sglang.yaml  qwen3-1.7b-vllm.yaml  qwen3-coder-next-fp8-sglang-cluster.yaml  qwen3-coder-next-sglang-cluster.yaml  qwen3.5-397B-gguf-q6k-sglang-cluster.yaml  qwen3.5-397b-gguf-q3km-llama-cpp.yaml  qwen3.5-397b-gguf-q6k-llama-cpp.yaml
recipes/minimax-m2.5/: minimax-m2.5-sglang-tp4.yaml
recipes/neomtron3-nano/: nemotron3-nano-30b-nvfp4-vllm.yaml  nemotron3-nano-30b-vllm.yaml
recipes/qwen3/: qwen3-1.7b-llama-cpp.yaml  qwen3-1.7b-sglang.yaml  qwen3-1.7b-vllm.yaml
recipes/qwen3-coder-next/: qwen3-coder-next-fp8-sglang-cluster.yaml
recipes/qwen3.5/: qwen3.5-35b-bf16-sglang.yaml  qwen3.5-397b-nvfp4-sglang.yaml
recipes/qwen3.5-gguf/: qwen3.5-397b-gguf-q6k-llama-cpp.yaml
scripts/: update-versions.py
sparkrun-cc-plugin/: README.md
sparkrun-cc-plugin/.claude-plugin/: plugin.json
sparkrun-cc-plugin/commands/: benchmark.md  list.md  run.md  setup.md  status.md  stop.md
src/sparkrun/: __init__.py  __main__.py  benchmark.py  (+8 more)
tests/: conftest.py  test_benchmark.py  test_bootstrap.py  test_builder.py  test_cli.py  test_cli_recipe.py  test_cluster_manager.py  test_config.py  test_distribute.py  test_docker.py  test_hooks.py  test_hosts.py  test_infiniband.py  test_primitives.py  test_proxy.py  test_recipe.py  test_registry.py  test_runtimes.py  test_scripts.py  test_ssh.py  test_tuning.py  test_vram.py
website/: astro.config.mjs  package.json  wrangler.jsonc
(+125 files in other folders)
